[package]
name = "ark-isep"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
ark-ff = { version = "0.5.0", features = ["parallel"] }
ark-poly = { version = "0.5.0", features = ["parallel"] }
ark-ec = { version = "0.5.0", features = ["parallel"] }
ark-std = { version = "0.5.0", features = ["parallel"] }
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
merlin = { version = "3.0.0" }
blake2 = "0.10.6"